--- a/style.css
+++ b/style.css
@@ -1,48 +1,87 @@
-header {
-    text-align: center;
-}
-h1 {
-    font-size: 50px;
-}
-nav {
-    background-color: #00000010;
-}
-ul {
-    background-color: rgba(22, 96, 255, 0.8);
-    list-style: none;
-    display: flex;
-    flex-direction: row;
-}
-li a {
-    position: relative;
-    display: block;
-    padding: 16px;
-    text-decoration: none;
-    font-size: 20px;
-    font-weight: bold;
-    color: #ffffff;
-}
-li a:hover {
-    text-decoration: none;
-    color: #ffffff;
-    background-color: #183b75;
-}
-li ul {
-    display: none;
-}
-li:hover ul {
-    position: absolute;
-    display: flex;
-    flex-direction: column;
-    padding-left: 0px;
-    margin-left: 0px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.5);
-    z-index: 1;
-}
-
-body
+body    
     {
-    background: url("poisson.jpg") fixed no-repeat;
+        margin: 0px;
+        background: url("poisson.jpg") fixed no-repeat;
+    }
+
+header 
+    {
+        text-align: center;
+        height: 100px;
+        background-color:  rgba(22, 96, 255, 0.8);
+        margin: 0px;
+        border: 1px solid black;
+    }
+
+h1 
+    {
+        font-size: 80px;
+        margin: 0px;
+        height: 100px;
+    }
+
+h2
+    {
+        font-size: 30px;
+    }
+
+nav 
+    {
+        text-align: center;
+        margin: 0px;
+        height: 50px;
+        border-bottom: 1px black solid;
+    }
+
+ul 
+    {
+        background-color: rgba(91, 143, 255, 0.8);
+        list-style: none;
+        display: flex;
+        flex-direction: row;
+        margin: 0px;
+        height: 50px;
+    }
+
+li a 
+    {
+        height: 19px;
+        width: 80px;
+        position: relative;
+        display: block;
+        padding: 16px;
+        text-align: center;
+        text-decoration: none;
+        font-size: 20px;
+        font-weight: bold;
+        color: #ffffff;
+    }
+
+li a:hover 
+    {
+        text-align: center;
+        height: 19px;
+        width: 80px;
+        text-decoration: none;
+        color: #ffffff;
+        background-color: rgba(22, 96, 255, 0.8);
+    }
+
+li ul 
+    {
+        display: none;
+    }
+
+li:hover ul 
+    {
+        width: 112px;
+        position: absolute;
+        display: flex;
+        flex-direction: column;
+        padding: 0px;
+        margin: 0px;
+        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.5);
+        /*z-index: 1;*/
     }
 
 .tableau
@@ -68,22 +107,13 @@ th, td
         text-decoration: none;
     }
 
-.retour
-    {
-        border: 1px black solid;
-        background-color: rgba(0,0,0,0.5);
-        font-size: 20px;
-        text-decoration: none;
-        color: white;
-    }
-
 .image
     {
         width: 240px;
         height: 180px;
     }
 
-p
+p, span
     {
         font-size: 25px;
     }
@@ -91,6 +121,7 @@ p
 .h2
     {
         text-decoration: underline;
+        margin-top: 50px;
     }
 
 .contact
@@ -98,9 +129,81 @@ p
         width: 500px;
     }
 
-#contact
+#formulaire
     {
-       display: flex;
-       flex-direction: column;
-       align-items: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
+.valid
+    {
+        width: 100px;
+        height: 30px;
+        font-size: 18px;
+        margin-top: 30px;
+    }
+
+.valid:hover
+    {
+        color: rgba(22, 96, 255, 0.8);
+        background-color: black;  
+    }
+
+.creation, .creation2
+    {
+        width: 500px;
+    }
+
+.creation2
+    {
+        height: 100px;
+        overflow: scroll;
+    }
+
+.formulaire
+    {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
+.succes
+    {
+        font-size: 2em;
+        font-weight: bold;
+        /*text-decoration: underline;*/
+        display: flex;
+        justify-content: center;
+        margin-top: 10px;
+    }
+
+a:hover
+    {
+        color: blue;
+    }
+
+.contactus    
+    {
+        /*background-color: rgba(0,0,0,0.9);*/
+    }
+
+.modif, .envoyer
+    {
+        width: 100px;
+        height: 30px;
+        font-size: 18px;
+    }
+
+.modif:hover, .envoyer:hover
+    {
+        color: rgba(22, 96, 255, 0.8);
+        background-color: black;
+    }
+
+.label
+    {
+        font-size: 20px;
     }
