--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ li a:hover
         height: 19px;
         width: 80px;
         text-decoration: none;
-        color: #ffffff;
+        color: black;
         background-color: rgba(22, 96, 255, 0.8);
     }
 
@@ -92,7 +92,7 @@ li:hover ul
 
 table
     {
-        background-color: rgba(0,0,0,0.5);
+        background-color: rgba(0,0,0,0.8);
     }
 
 th, td
@@ -111,6 +111,12 @@ th, td
     {
         width: 240px;
         height: 180px;
+    }
+
+.image2
+    {
+        width: 480px;
+        height: 360px;
     }
 
 p, span
