--- a/style.css
+++ b/style.css
@@ -1,11 +1,20 @@
+@font-face
+    {
+        font-family: 'nemo';
+        src: url('polices/nemo.ttf');
+        font-weight: normal;
+        font-style: normal;
+    }
 body    
     {
+        font-family: 'Sérif';
         margin: 0px;
         background: url("poisson.jpg") fixed no-repeat;
     }
 
 header 
     {
+        font-family: 'nemo';
         text-align: center;
         height: 100px;
         background-color:  rgba(22, 96, 255, 0.8);
@@ -46,7 +55,7 @@ ul
 li a 
     {
         height: 19px;
-        width: 80px;
+        width: 150px;
         position: relative;
         display: block;
         padding: 16px;
@@ -61,7 +70,7 @@ li a:hover
     {
         text-align: center;
         height: 19px;
-        width: 80px;
+        width: 150px;
         text-decoration: none;
         color: black;
         background-color: rgba(22, 96, 255, 0.8);
@@ -74,7 +83,7 @@ li ul
 
 li:hover ul 
     {
-        width: 112px;
+        width: 182px;
         position: absolute;
         display: flex;
         flex-direction: column;
@@ -152,6 +161,7 @@ p, span
         height: 30px;
         font-size: 18px;
         margin-top: 30px;
+        margin-bottom: 50px;
     }
 
 .valid:hover
