--- a/style.css
+++ b/style.css
@@ -10,6 +10,8 @@ body
         font-family: 'Sérif';
         margin: 0px;
         background: url("poisson.jpg") fixed no-repeat;
+        height: 100%;
+        width: 100%;
     }
 
 header 
@@ -101,7 +103,7 @@ li:hover ul
 
 table
     {
-        background-color: rgba(0,0,0,0.8);
+        background-color: rgba(0,0,0,0.4);
     }
 
 th, td
@@ -121,6 +123,12 @@ th, td
     {
         width: 240px;
         height: 180px;
+    }
+
+.image:hover
+    {
+        transition: all 0.5s ease;
+        transform: rotate(360deg);
     }
 
 .image2
@@ -259,3 +267,20 @@ a:hover
     {
         margin-left: 15px;
     }
+
+#copyright
+	{
+		font-size: 0.8em;
+		font-style: italic;
+    }
+    
+.copyright
+	{
+        display: flex;
+        justify-content: center;
+        border: 1px solid black;
+        background-color: rgba(91, 143, 255, 0.8);
+        position: fixed;
+        bottom: 0;
+        width: 100%;
+	}
