--- a/style.css
+++ b/style.css
@@ -14,6 +14,13 @@ body
         width: 100%;
     }
 
+article
+    {
+        width: 100%;
+        height: 50%;
+        /*overflow: scroll;*/
+    }
+
 header 
     {
         font-family: 'nemo';
@@ -97,6 +104,7 @@ li:hover ul
 
 .tableau
     {
+        
         display: flex;
         justify-content: center;
     }
@@ -104,6 +112,8 @@ li:hover ul
 table
     {
         background-color: rgba(0,0,0,0.4);
+        width: 80%;
+        margin: 50px 0px 50px 0px;
     }
 
 th, td
