--- a/style.css
+++ b/style.css
@@ -17,8 +17,8 @@ body
 article
     {
         width: 100%;
-        height: 50%;
-        /*overflow: scroll;*/
+        height: 570px;
+        overflow-y: scroll;
     }
 
 header 
