--- a/style.css
+++ b/style.css
@@ -297,6 +297,18 @@ a:hover
         width: 100%;
     }
 
+.copyright2
+	{
+        display: flex;
+        justify-content: center;
+        border: 1px solid black;
+        background-color: rgba(91, 143, 255, 0.8);
+        position: relative;
+        bottom: 0;
+        /*width: 100%;*/
+        padding: 0px;
+        margin: 0%;
+    }    
 nav
     {
         display: inline block;
