--- a/style.css
+++ b/style.css
@@ -11,15 +11,6 @@ body
         margin: 0px;
         background: url("poisson.jpg") fixed no-repeat;
         background-size: 100%;
-        height: 100%;
-        width: 100%;
-    }
-
-article
-    {
-        width: 100%;
-        height: 80%;
-        /*overflow-y: scroll;*/
     }
 
 header 
@@ -103,9 +94,9 @@ li:hover ul
         /*z-index: 1;*/
     }
 
-.tableau
+#tableau
     {
-        
+        border: 1px black solid;
         display: flex;
         justify-content: center;
     }
@@ -305,9 +296,6 @@ a:hover
         background-color: rgba(91, 143, 255, 0.8);
         position: relative;
         bottom: 0;
-        /*width: 100%;*/
-        padding: 0px;
-        margin: 0%;
     }    
 nav
     {
